logs/pycsalgos.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyCSalgos'...
Listing './lib/python3.5/site-packages/pyCSalgos/ABS'...
Listing './lib/python3.5/site-packages/pyCSalgos/BP'...
Compiling './lib/python3.5/site-packages/pyCSalgos/BP/l1eq_pd.py'...
***   File "./lib/python3.5/site-packages/pyCSalgos/BP/l1eq_pd.py", line 254
    print 'Starting point infeasible; using x0 = At*inv(AAt)*y.'
                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyCSalgos/BP/l1qc.py'...
***   File "./lib/python3.5/site-packages/pyCSalgos/BP/l1qc.py", line 142
    print 'cg: Iter = ',numiter,', Best residual = ',bestres,', Current residual = ',math.sqrt(delta/delta0)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyCSalgos/BP/l1qec.py'...
***   File "./lib/python3.5/site-packages/pyCSalgos/BP/l1qec.py", line 76
    print 'cg: Iter = ',numiter,', Best residual = ',bestres,', Current residual = ',math.sqrt(delta/delta0)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyCSalgos/GAP'...
Compiling './lib/python3.5/site-packages/pyCSalgos/GAP/GAP.py'...
***   File "./lib/python3.5/site-packages/pyCSalgos/GAP/GAP.py", line 163
    print 'fidelity_error=',temp
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyCSalgos/NESTA'...
Compiling './lib/python3.5/site-packages/pyCSalgos/NESTA/NESTA.py'...
***   File "./lib/python3.5/site-packages/pyCSalgos/NESTA/NESTA.py", line 358
    print 'Measurement matrix A must be a partial isometry: AA''=I'
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyCSalgos/OMP'...
Compiling './lib/python3.5/site-packages/pyCSalgos/OMP/omp_QR.py'...
***   File "./lib/python3.5/site-packages/pyCSalgos/OMP/omp_QR.py", line 111
    print 'x must be a vector.'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyCSalgos/SL0'...
Compiling './lib/python3.5/site-packages/pyCSalgos/SL0/EllipseProj.py'...
***   File "./lib/python3.5/site-packages/pyCSalgos/SL0/EllipseProj.py", line 119
    print "Ill conditioned problem, do vertical projection instead"
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyCSalgos/SL0/SL0.py'...
***   File "./lib/python3.5/site-packages/pyCSalgos/SL0/SL0.py", line 183
    print string
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyCSalgos/SL0/SL0_approx.py'...
***   File "./lib/python3.5/site-packages/pyCSalgos/SL0/SL0_approx.py", line 58
    print string
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyCSalgos/TST'...
Listing './lib/python3.5/site-packages/pyCSalgos-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
